--- a/next/package.json
+++ b/next/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.8",
+    "@tanstack/react-query": "^5.76.1",
     "bcrypt": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0",
